<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/layoutContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ScrollViewCount">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutConstrainContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                app:contentInsetStart="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:id="@+id/linearRowmemojiboysfortyone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

<!--                    <LinearLayout-->
<!--                        android:id="@+id/linearAvatar"-->
<!--                        android:layout_width="48dp"-->
<!--                        android:layout_height="48dp"-->
<!--                        android:gravity="center_horizontal"-->
<!--                        android:orientation="vertical">-->

<!--                        <de.hdodenhof.circleimageview.CircleImageView-->
<!--                            android:id="@+id/imageMemojiBoysFortyOne"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="match_parent"-->
<!--                            android:src="@drawable/user_anonymous"-->
<!--                            tools:ignore="ContentDescription" />-->
<!--                    </LinearLayout>-->

                    <LinearLayout
                        android:id="@+id/linearWelcome"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="1dp"
                        android:gravity="start"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/linearHello"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txtHiKitsbase"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="3dp"
                                android:ellipsize="end"
                                android:lineSpacingExtra="5dp"
                                android:singleLine="true"
                                android:text="@string/tv_hi"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txtUsername"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:ellipsize="end"
                                android:lineSpacingExtra="5dp"
                                android:singleLine="true"
                                android:text="@string/tv_username"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/txtWelcometoTrad"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:ellipsize="end"
                            android:lineSpacingExtra="4dp"
                            android:singleLine="true"
                            android:text="@string/tv_welcome" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/btn_logout"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:backgroundTint="@android:color/transparent"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_logout"
                        tools:ignore="ContentDescription" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:id="@+id/ll_friends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="start"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbarToolbar">

                <TextView
                    android:id="@+id/tv_friends"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/tv_friends"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_friends" />

            <LinearLayout
                android:id="@+id/ll_conversations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="start"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rcv_users">

                <TextView
                    android:id="@+id/tv_conversations"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/tv_new_messages"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_conversations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_conversations" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>